--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "gatsby-remark-responsive-iframe": "^2.2.4",
     "gatsby-remark-smartypants": "^2.1.2",
     "gatsby-source-filesystem": "^2.1.9",
-    "gatsby-transformer-remark": "^2.6.13",
+    "gatsby-transformer-remark": "^2.6.15",
     "gatsby-transformer-sharp": "^2.2.6",
     "prismjs": "^1.17.1",
     "prop-types": "^15.7.2",
@@ -38,6 +38,7 @@
     "build": "gatsby build",
     "dev": "gatsby develop",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "info": "gatsby info --clipboard"
   }
 }
