--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
-  "name": "not-just-code",
+  "name": "answer",
   "private": true,
-  "author": "mebtte <mebtte@gmail.com>",
-  "dependencies": {
+  "author": "mebtte<mebtte@gmail.com>",
+  "devDependencies": {
     "babel-plugin-styled-components": "^1.10.6",
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb": "^18.0.0",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "fontmin": "^0.9.8",
     "gatsby": "^2.13.61",
     "gatsby-plugin-feed": "^2.3.19",
     "gatsby-plugin-react-helmet": "^3.1.3",
@@ -20,20 +26,13 @@
     "gatsby-source-filesystem": "^2.1.9",
     "gatsby-transformer-remark": "^2.6.15",
     "gatsby-transformer-sharp": "^2.2.6",
+    "prettier": "^1.18.2",
     "prismjs": "^1.17.1",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
     "styled-components": "^4.3.2"
-  },
-  "devDependencies": {
-    "eslint": "^6.1.0",
-    "eslint-config-airbnb": "^18.0.0",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-react-hooks": "^1.7.0",
-    "prettier": "^1.18.2"
   },
   "scripts": {
     "build": "gatsby build",
