--- a/config.json
+++ b/config.json
@@ -1,3 +1,5 @@
 {
-  "site": "https://article.mebtte.com"
+  "site": "https://article.mebtte.com",
+  "title": "答案",
+  "description": "MEBTTE写的那些东西"
 }
