--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-source-filesystem": "^2.1.9",
     "gatsby-transformer-remark": "^2.6.15",
     "gatsby-transformer-sharp": "^2.2.6",
+    "mkdirp": "^1.0.4",
     "prettier": "^1.18.2",
     "prismjs": "^1.17.1",
     "prop-types": "^15.7.2",
