--- a/package.json
+++ b/package.json
@@ -1,7 +1,18 @@
 {
   "name": "answer",
   "private": true,
-  "author": "mebtte<mebtte@gmail.com>",
+  "author": {
+    "name": "mebtte",
+    "email": "hi@mebtte.com",
+    "url": "https://mebtte.com"
+  },
+  "scripts": {
+    "build": "gatsby build",
+    "dev": "gatsby develop --host=0.0.0.0",
+    "serve": "gatsby serve",
+    "clean": "gatsby clean",
+    "info": "gatsby info --clipboard"
+  },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.10.6",
     "eslint": "^6.1.0",
@@ -29,12 +40,5 @@
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
     "styled-components": "^5.1.0"
-  },
-  "scripts": {
-    "build": "gatsby build",
-    "dev": "gatsby develop --host=0.0.0.0",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "info": "gatsby info --clipboard"
   }
 }
