--- a/package.json
+++ b/package.json
@@ -1,44 +1,28 @@
 {
   "name": "answer",
   "private": true,
+  "type": "module",
   "author": {
     "name": "mebtte",
     "email": "hi@mebtte.com",
     "url": "https://mebtte.com"
   },
   "scripts": {
-    "build": "gatsby build",
-    "dev": "gatsby develop --host=0.0.0.0",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "info": "gatsby info --clipboard"
+    "dev": "cross-env NODE_ENV=production node scripts/dev.js",
+    "build": "cross-env NODE_ENV=production node scripts/build.js",
+    "serve": "http-server build -p 9000 "
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^1.10.6",
-    "eslint": "^6.1.0",
-    "eslint-config-airbnb": "^18.0.0",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-react-hooks": "^1.7.0",
-    "fontmin": "^0.9.8",
-    "gatsby": "^2.13.61",
-    "gatsby-plugin-feed": "^2.3.19",
-    "gatsby-plugin-react-helmet": "^3.1.3",
-    "gatsby-plugin-sharp": "^2.2.11",
-    "gatsby-plugin-styled-components": "^3.3.0",
-    "gatsby-remark-prismjs": "^3.3.5",
-    "gatsby-remark-smartypants": "^2.1.2",
-    "gatsby-source-filesystem": "^2.1.9",
-    "gatsby-transformer-remark": "^2.6.15",
-    "gatsby-transformer-sharp": "^2.2.6",
-    "md5": "^2.2.1",
-    "mkdirp": "^1.0.4",
-    "prettier": "^1.18.2",
-    "prismjs": "^1.20.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-helmet": "^5.2.1",
-    "styled-components": "^5.1.0"
+    "cheerio": "^1.0.0-rc.3",
+    "cross-env": "^7.0.2",
+    "ejs": "^3.1.5",
+    "eventemitter3": "^4.0.7",
+    "front-matter": "^4.0.2",
+    "fs-extra": "^9.0.1",
+    "http-server": "^0.12.3",
+    "md5": "^2.3.0",
+    "ora": "^5.1.0",
+    "prettier": "^1.19.1",
+    "showdown": "^1.9.1"
   }
 }
