--- a/package.json
+++ b/package.json
@@ -8,15 +8,14 @@
     "url": "https://mebtte.com"
   },
   "scripts": {
-    "dev": "cross-env NODE_ENV=production node scripts/dev.js",
-    "build": "cross-env NODE_ENV=production node scripts/build.js",
-    "serve": "http-server build -p 9000 "
+    "build": "node scripts/build.js",
+    "serve": "http-server build -p 9000 -c=0"
   },
   "devDependencies": {
     "cheerio": "^1.0.0-rc.3",
-    "cross-env": "^7.0.2",
     "ejs": "^3.1.5",
     "eventemitter3": "^4.0.7",
+    "fontmin": "^0.9.8",
     "front-matter": "^4.0.2",
     "fs-extra": "^9.0.1",
     "http-server": "^0.12.3",
