--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "scripts": {
     "build": "node scripts/build.js",
-    "serve": "cross-env PUBLIC_PATH=\"\" node scripts/build.js && http-server build -p 9000 -c=0",
-    "gh-pages": "cross-env PUBLIC_PATH=/article SITE=\"https://mebtte.github.io\" node scripts/build.js"
+    "serve": "cross-env PUBLIC_PATH=\"\" node scripts/build.js && npm run http-server",
+    "http-server": "http-server build -p 9000 -c=0"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,7 @@
     "fontmin": "^0.9.8",
     "front-matter": "^4.0.2",
     "fs-extra": "^9.0.1",
+    "html-entities": "^1.3.1",
     "http-server": "^0.12.3",
     "md5": "^2.3.0",
     "ora": "^5.1.0",
