--- a/.github/workflows/gh_pages.yml
+++ b/.github/workflows/gh_pages.yml
@@ -16,7 +16,7 @@ jobs:
 
       - name: build gh-pages
         env:
-          SITE: https://mebtte.github.io
+          SITE: https://williamszhang.github.io
           PUBLIC_PATH: /article
         run: |
           npm install
@@ -27,8 +27,8 @@ jobs:
         run: |
           cd build
           git init
-          git config --local user.name mebtte
-          git config --local user.email hi@mebtte.com
+          git config --local user.name WilliamsZhang
+          git config --local user.email williams_z@yeah.net
           git remote add origin https://$TOKEN@github.com/$GITHUB_REPOSITORY.git
           git checkout -b gh-pages
           git add --all
