--- a/.github/workflows/gh_pages.yml
+++ b/.github/workflows/gh_pages.yml
@@ -26,7 +26,7 @@ jobs:
           TOKEN: ${{secrets.TOKEN}}
         run: |
           cd build
-          # git init
+          git init
           git config --local user.name WilliamsZhang
           git config --local user.email williams_z@yeah.net
           # git remote add origin https://$TOKEN@github.com/$GITHUB_REPOSITORY.git
