recover github workflows

--- a/.github/workflows/gh_pages.yml
+++ b/.github/workflows/gh_pages.yml
@@ -24,11 +24,13 @@ jobs:
       - name: deploy gh-pages
         env:
           TOKEN: ${{secrets.TOKEN}}
+          EMAIL: ${{secrets.EMAIL}}
+          USERNAME: ${{secrets.USERANME}}
         run: |
           cd build
           git init
-          git config --local user.name mebtte
-          git config --local user.email hi@mebtte.com
+          git config --local user.name $USERANME
+          git config --local user.email $EMAIL
           git remote add origin https://$TOKEN@github.com/$GITHUB_REPOSITORY.git
           git checkout -b gh-pages
           git add --all
