--- a/.github/workflows/gh_pages.yml
+++ b/.github/workflows/gh_pages.yml
@@ -18,6 +18,9 @@ jobs:
         run: |
           npm install
           npm run build
+      - name: create cname file
+        run: |
+          echo article.mebtte.com > CNAME
       - name: deploy gh-pages
         env:
           TOKEN: ${{secrets.TOKEN}}
