--- a/.github/workflows/gh_pages.yml
+++ b/.github/workflows/gh_pages.yml
@@ -20,7 +20,7 @@ jobs:
           npm run build
       - name: create cname file
         run: |
-          echo article.mebtte.com > CNAME
+          echo article.mebtte.com > build/CNAME
       - name: deploy gh-pages
         env:
           TOKEN: ${{secrets.TOKEN}}
